[package]
authors = ["Maksim Vykhota <m.vykhota@protonmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-sensor"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
defmt = "0.2.3"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "0.13.0"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f407"]
version = "0.9.0"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-sensor"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
